// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryEditorModal > snapshots > should match snapshot for edit category mode 1`] = `
<div>
  <dialog
    class="modal-dialog"
    open=""
  >
    <div
      class="modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
        >
          Edit: Category 1
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
          type="button"
        >
          ×
        </button>
      </div>
      <form
        class="modal__body"
      >
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
            for="category-name"
          >
            Name 
            <span
              class="modal__required"
            >
              *
            </span>
          </label>
          <input
            class="modal__input"
            id="category-name"
            placeholder="Category name"
            required=""
            type="text"
            value="Category 1"
          />
        </div>
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
            for="category-description"
          >
            Description
          </label>
          <textarea
            class="modal__textarea"
            id="category-description"
            placeholder="Optional description"
            rows="3"
          >
            Description 1
          </textarea>
        </div>
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
            for="category-parent"
          >
            Parent Category
          </label>
          <select
            class="modal__select"
            id="category-parent"
          >
            <option
              value=""
            >
              None (root level)
            </option>
            <option
              value="2"
            >
              Category 2
            </option>
          </select>
        </div>
        <div
          class="modal__field"
        >
          <div
            data-testid="visibility-toggle"
          >
            Visibility
          </div>
        </div>
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
          >
            Recommended Templates
          </label>
          <div
            data-testid="category-template-selector"
          >
            Template Selector (selected: 
            0
            )
            <button>
              Select Templates
            </button>
          </div>
        </div>
        <div
          class="modal__actions"
        >
          <button
            class="detail__btn detail__btn--primary"
            type="submit"
          >
            Save
          </button>
          <button
            class="detail__btn detail__btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="detail__btn detail__btn--danger"
            type="button"
          >
            Delete
          </button>
        </div>
      </form>
    </div>
  </dialog>
</div>
`;

exports[`CategoryEditorModal > snapshots > should match snapshot for new category mode 1`] = `
<div>
  <dialog
    class="modal-dialog"
    open=""
  >
    <div
      class="modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
        >
          Add Category
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
          type="button"
        >
          ×
        </button>
      </div>
      <form
        class="modal__body"
      >
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
            for="category-name"
          >
            Name 
            <span
              class="modal__required"
            >
              *
            </span>
          </label>
          <input
            class="modal__input"
            id="category-name"
            placeholder="Category name"
            required=""
            type="text"
            value=""
          />
        </div>
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
            for="category-description"
          >
            Description
          </label>
          <textarea
            class="modal__textarea"
            id="category-description"
            placeholder="Optional description"
            rows="3"
          />
        </div>
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
            for="category-parent"
          >
            Parent Category
          </label>
          <select
            class="modal__select"
            id="category-parent"
          >
            <option
              value=""
            >
              None (root level)
            </option>
            <option
              value="1"
            >
              Category 1
            </option>
            <option
              value="2"
            >
              Category 2
            </option>
            <option
              value="3"
            >
              Child of Category 1
            </option>
          </select>
        </div>
        <div
          class="modal__field"
        >
          <div
            data-testid="visibility-toggle"
          >
            Visibility
          </div>
        </div>
        <div
          class="modal__field"
        >
          <label
            class="modal__label"
          >
            Recommended Templates
          </label>
          <div
            data-testid="category-template-selector"
          >
            Template Selector (selected: 
            0
            )
            <button>
              Select Templates
            </button>
          </div>
        </div>
        <div
          class="modal__actions"
        >
          <button
            class="detail__btn detail__btn--primary"
            disabled=""
            type="submit"
          >
            Create
          </button>
          <button
            class="detail__btn detail__btn--secondary"
            type="button"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </dialog>
</div>
`;
